--- a/style.css
+++ b/style.css
@@ -1,30 +1,69 @@
-*{
+* {
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 21px;
+    background-image: url(images/patt.png);
 }
-.container{
+
+.header {
+    padding: 25px 0;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.container {
     width: 1200px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
-.row{
-    margin: 0 -15px;
+
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
 }
-.row:after{
-content: "";
-display: block;
-clear: both;
+
+.row:after,
+.menu:after {
+    content: "";
+    display: block;
+    clear: both;
 }
-.col-md-3{
+
+.col-md-3 {
     width: 25%;
 }
-.col-md-6{
+
+.col-md-6 {
     width: 50%;
 }
-[class*="col-"]{
+
+[class*="col-"] {
     float: left;
     padding: 0 15px;
+}
+
+.menu li {
+    float: left;
+    width: 25%;
+    border-left: 1px solid #2c71b8;
+}
+.menu li:last-child{
+ border-right: 1px solid #2c71b8
+}
+
+.menu a {
+    display: block;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    text-decoration: none;
+    color: #2c71b8;
+    font-weight: 300;
+}
+.menu a:hover{
+    background-color: #2c71b8;
+    color: white;
 }
