--- a/style.css
+++ b/style.css
@@ -45,12 +45,13 @@ body {
     padding: 0 15px;
 }
 
-.menu li {
+.menu>li {
     float: left;
     width: 25%;
     border-left: 1px solid #2c71b8;
+    position: relative;
 }
-.menu li:last-child{
+.menu>li:last-child{
  border-right: 1px solid #2c71b8
 }
 
@@ -63,7 +64,38 @@ body {
     color: #2c71b8;
     font-weight: 300;
 }
-.menu a:hover{
+.menu>li:hover a{
     background-color: #2c71b8;
     color: white;
+}
+.menu>li:hover .submenu{
+    display: block;
+}
+.submenu{
+    display: none;
+    position: absolute;
+    width: 286px;
+    left: -1px;
+    top: 55px;
+    margin-top: -5px;
+    
+}
+.submenu li{
+    background-color: #2c71b8;
+    
+}
+.submenu a{
+    color: white;
+    text-align: left;
+    padding-left: 30px;
+}
+.submenu li:hover a{
+background-color: white;
+color: #2c71b8;
+}
+.find{
+    float: left;
+}
+.basket{
+    float: right;
 }
