--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ body {
 .menu>li:last-child {
     border-right: 1px solid #2c71b8
 }
-.menu>li:nth-child(2){
+
+.menu>li:nth-child(2) {
     position: relative;
 }
 
@@ -94,6 +95,7 @@ body {
 .menu>li:hover .submenu {
     display: block;
 }
+
 .menu>li:hover .bird {
     color: white;
 }
@@ -156,13 +158,15 @@ body {
     background-color: #2c71b8;
     border: none;
 }
+
 .cart-img1,
-.cart-img2{
+.cart-img2 {
     position: absolute;
     top: 10px;
     left: 10px;
 }
-.cart-img2{
+
+.cart-img2 {
     display: none;
 }
 
@@ -172,22 +176,25 @@ body {
     height: 40px;
     background-color: white;
     margin: -5px 0 0 5px;
-    
-    
+
+
 }
-.cart a{
+
+.cart a {
     display: block;
 }
-.cart:hover{
+
+.cart:hover {
     background-color: #2c71b8;
-     
+
 }
-.cart:hover .cart-img2{
+
+.cart:hover .cart-img2 {
     display: block;
     transform: scale(1.15);
 }
 
-.product-count{
+.product-count {
     position: absolute;
     top: -10px;
     left: -10px;
@@ -200,4 +207,10 @@ body {
     font-size: 12px;
     line-height: 20px;
     font-weight: 500;
+}
+
+
+.slider {
+    height: 400px;
+    background-color: rgba(0, 0, 0, 0.20);
 }
