--- a/style.css
+++ b/style.css
@@ -259,6 +259,26 @@ body {
     color: white;
     font-weight: 700;
 }
+.sort{
+    margin-top: 65px;
+    width: 100%;
+    height: 40px;
+     background-color: #2c71b8;
+     border: 1px solid white;
+     font: inherit;
+     color: white;
+}
+.sort:focus {
+    outline: none;
+}
+.sort option{
+    font: inherit;
+    height: 40px;
+}
+.sort>option:hover {
+    background-color: white;
+    color: #2c71b8;
+}
 
 [class*="img-"] {
     position: relative;
