--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
     padding-left: 15px;
 }
 
+.logo {
+    margin-top: 2px;
+}
+
 .row {
     margin-left: -15px;
     margin-right: -15px;
@@ -38,6 +42,10 @@ body {
 
 }
 
+.col-md-4 {
+    width: 33.333%;
+}
+
 .m5px {
     margin-top: 5px;
 }
@@ -46,8 +54,16 @@ body {
     width: 50%;
 }
 
+.col-md-8 {
+    width: 66.666%;
+}
+
 .col-md-9 {
     width: 75%;
+}
+
+.col-md-12 {
+    width: 100%;
 }
 
 [class*="col-"] {
@@ -160,10 +176,13 @@ body {
     width: 30px;
     height: 30px;
     background-color: #2c71b8;
+    background-image: url(images/icon\ \(4\).png);
+    background-repeat: no-repeat;
+    background-position: center;
     border: none;
 }
 
-.cart-img1,
+/*.cart-img1,
 .cart-img2 {
     position: absolute;
     top: 10px;
@@ -172,7 +191,7 @@ body {
 
 .cart-img2 {
     display: none;
-}
+}*/
 
 .cart {
     position: relative;
@@ -180,7 +199,9 @@ body {
     height: 40px;
     background-color: white;
     margin: -5px 0 0 5px;
-
+    background-image: url(images/icon\ \(1\).png);
+    background-repeat: no-repeat;
+    background-position: center;
 
 }
 
@@ -190,13 +211,13 @@ body {
 
 .cart:hover {
     background-color: #2c71b8;
-
+    background-image: url(images/icon\ \(2\).png);
 }
 
-.cart:hover .cart-img2 {
+/*.cart:hover .cart-img2 {
     display: block;
     transform: scale(1.15);
-}
+}*/
 
 .product-count {
     position: absolute;
@@ -229,75 +250,95 @@ body {
 
 
 
-.h165 {
-    height: 165px;
-}
 
-.pos {
+
+/*.pos {
     position: relative;
 }
 
-.adress {
+.breadcrumbs {
     position: absolute;
     left: 0px;
     top: 30px;
     width: 550px;
+}*/
+.breadcrumbs {
+    margin-top: 28px;
 }
-.adress>p, .adress a{
+
+.breadcrumbs>p,
+.breadcrumbs a {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.5);
 }
-.adress a{
+
+.breadcrumbs a {
     text-decoration: none;
 }
-.adress a:last-child{
+
+.breadcrumbs a:last-child {
     text-decoration: underline;
 }
-.adress h1{
+
+.h1 {
+    margin: 22px 0 52px 0;
+}
+
+.h1 h1 {
     font-size: 48px;
-    line-height: 92px;
     color: white;
     font-weight: 700;
 }
-.sort{
-    margin-top: 65px;
+
+.h46 {
+    height: 46px;
+    margin-top: 22px;
+}
+
+.sort {
+    margin-top: 4px;
     width: 100%;
     height: 40px;
-     background-color: #2c71b8;
-     border: 1px solid white;
-     font: inherit;
-     color: white;
+    background-color: #2c71b8;
+    border: 1px solid white;
+    font: inherit;
+    color: white;
 }
+
 .sort:focus {
     outline: none;
 }
-.sort option{
+
+.sort option {
     font: inherit;
     height: 40px;
 }
+
 .sort>option:hover {
     background-color: white;
     color: #2c71b8;
 }
 
-[class*="img-"] {
+.product-image {
     position: relative;
     height: 180px;
     background-color: rgba(255, 255, 255, 0.75);
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
-.img-1{
-    background-image: url(images/icon\ \(17\).png);
+.product-image>img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
 }
-.img-2 {
-    background-image: url(images/icon\ \(9\).png);
+.product-image:hover img {
+    transform: scale(1.5);
+    transition: 1s;
+    overflow: hidden;
 }
-.img-3 {
-    background-image: url(images/icon\ \(10\).png);
-}
-    
+
 .rot-left,
 .rot-right {
     position: absolute;
@@ -318,9 +359,58 @@ body {
     transform-origin: 100% 0px;
     transform: rotate(-33.7deg);
 }
+.zoom, .like{
+    width: 28px;
+    height: 28px;
+    border: 1px solid #2c71b8;
+    
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    
+    right: 10px;
+}
+.zoom{
+top: 10px;
+background-image: url(images/icon\ \(8\).png);
+}
+.like{
+top: 48px;
+background-image: url(images/icon\ \(5\).png);
+}
+.zoom:hover {
+    background-color: #2c71b8;
+    background-image: url(images/icon\ \(6\).png);
+}
+.like:hover {
+    background-color: #2c71b8;
+    background-image: url(images/icon\ \(7\).png);
+}
 
-.product {
+.product-body {
     height: 473px;
     background-color: rgba(44, 113, 184, 0.75);
     border: 1px solid white;
+    padding: 15px;
+    color: white;
+        line-height: 28px;
+}
+.product-title>h3{
+    font-size: 30px;
+    font-weight: 700;
+}
+.product-description{
+    margin-top: 10px;
+}
+.product-features>p{
+    margin: 8px 0;
+}
+.product-features span{
+    text-transform: uppercase;
+    font-weight: 700;
+}
+/*.product-price{
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
 }
