--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ body {
 }
 
 .h1 {
-    margin: 22px 0 52px 0;
+    margin: 22px 0 36px 0;
 }
 
 .h1 h1 {
@@ -319,6 +319,10 @@ body {
     color: #2c71b8;
 }
 
+.table {
+    margin: 16px 0;
+}
+
 .product-image {
     position: relative;
     height: 180px;
@@ -333,6 +337,7 @@ body {
     bottom: 0;
     margin: auto;
 }
+
 .product-image:hover img {
     transform: scale(1.5);
     transition: 1s;
@@ -359,29 +364,35 @@ body {
     transform-origin: 100% 0px;
     transform: rotate(-33.7deg);
 }
-.zoom, .like{
+
+.zoom,
+.like {
     width: 28px;
     height: 28px;
     border: 1px solid #2c71b8;
-    
+
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    
+
     right: 10px;
 }
-.zoom{
-top: 10px;
-background-image: url(images/icon\ \(8\).png);
+
+.zoom {
+    top: 10px;
+    background-image: url(images/icon\ \(8\).png);
 }
-.like{
-top: 48px;
-background-image: url(images/icon\ \(5\).png);
+
+.like {
+    top: 48px;
+    background-image: url(images/icon\ \(5\).png);
 }
+
 .zoom:hover {
     background-color: #2c71b8;
     background-image: url(images/icon\ \(6\).png);
 }
+
 .like:hover {
     background-color: #2c71b8;
     background-image: url(images/icon\ \(7\).png);
@@ -393,24 +404,86 @@ background-image: url(images/icon\ \(5\).png);
     border: 1px solid white;
     padding: 15px;
     color: white;
-        line-height: 28px;
+    line-height: 28px;
 }
-.product-title>h3{
+
+.product-title>h3 {
     font-size: 30px;
     font-weight: 700;
 }
-.product-description{
+
+.product-description {
     margin-top: 10px;
 }
-.product-features>p{
+
+.product-features>p {
     margin: 8px 0;
 }
-.product-features span{
+
+.product-features span {
     text-transform: uppercase;
     font-weight: 700;
 }
-/*.product-price{
+
+.product-price {
+    height: 52px;
     font-size: 48px;
     font-weight: 700;
     text-align: center;
+    margin: 15px 0;
+}
+
+.product-price>sup {
+    vertical-align: text-top;
+    font-size: 30px;
+}
+
+.btn {
+    display: block;
+    width: 210px;
+    height: 50px;
+    margin: 16px auto;
+    font-family: 'Roboto',
+        sans-serif;
+    font-size: 1em;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: white;
+}
+
+.btn:hover {
+    font-size: 24px;
+    transition: 0.5s;
+}
+
+.btn-more-details {
+    background-color: #2c71b8;
+    border: 1px solid white;
+}
+
+.btn-add-to-cart {
+    background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+}
+
+.more {
+    text-align: center;
+
+    font-size: 36px;
+    font-weight: 300;
+    margin: 24px 0 90px;
+}
+
+.more>a {
+    text-decoration: none;
+    color: white;
+}
+
+.footer {
+    height: 100px;
+    background-color: rgba(255, 255, 255, 0.75);
+    color: #2c71b8;
+    font-weight: 300;
+    text-align: center;
+    line-height: 100px;
 }
