--- a/style.css
+++ b/style.css
@@ -246,7 +246,48 @@ body {
     height: 843px;
     background-color: rgba(255, 255, 255, 0.2);
     border-right: 1px solid white;
+    padding: 6px 30px;
+    color: white;
 }
+
+.parameters fieldset{
+    padding: 24px 0;
+}
+.parameters p{
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+.parameters label::before{
+    content: "";
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border: solid 1px white;
+    margin-bottom: 2px;
+}
+.parameters input{
+    display: none;
+}
+.parameters input:checked+label::before{
+    background-color: white;
+}
+.parameters div{
+    padding: 10px 0;
+}
+.parameters a{
+    display: block;
+    text-decoration: none;
+    color: white;
+        margin-top: -15px;
+        margin-bottom: 22px;
+}
+
+
+
+
+
+
 
 
 
@@ -338,11 +379,11 @@ body {
     margin: auto;
 }
 
-.product-image:hover img {
+/*.product-image:hover img {
     transform: scale(1.5);
     transition: 1s;
     overflow: hidden;
-}
+}*/
 
 .rot-left,
 .rot-right {
