--- a/style.css
+++ b/style.css
@@ -439,6 +439,11 @@ body {
     background-image: url(images/icon\ \(7\).png);
 }
 
+.like_click_js{
+    background-color: #2c71b8;
+    background-image: url(images/icon\ \(7\).png);
+}
+
 .product-body {
     height: 473px;
     background-color: rgba(44, 113, 184, 0.75);
@@ -494,7 +499,11 @@ body {
 
 .btn:hover {
     font-size: 24px;
-    transition: 0.5s;
+    transition: 0.2s;
+}
+
+.btn:active {
+    font-size: unset;
 }
 
 .btn-more-details {
@@ -527,4 +536,52 @@ body {
     font-weight: 300;
     text-align: center;
     line-height: 100px;
+}
+
+.modal{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+.modal-block{
+    width: 300px;
+    height: 200px;
+    margin: 100px auto;
+    border: 1px solid gray;
+    padding: 15px;
+    background-color: #fff;
+}
+
+.form-field{
+    margin: 10px 0;
+}
+
+.modal-block>form{
+    position: relative;
+}
+
+.modal-block h3{
+    margin-top: 20px;
+}
+
+.btn-close{
+    font-size: 24px;
+    position: absolute;
+    top: -25px;
+    right: 0px;
+}
+.btn-close:hover{
+    cursor: pointer;
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: block;
 }
